# bcs-impl

./: .gitignore  CMakeLists.txt  README.md  gen_data.py  requirements.txt
include/: includes.h
includes/: includes.h
src/: main.cpp
